--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,6 +11,7 @@ body {
     "Helvetica Neue", "Noto Sans", "Liberation Sans",
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol", "Noto Color Emoji";
+    line-height: 1.5;
     font-size: 1.4rem;
     color: $white;
 }
@@ -27,3 +28,6 @@ body {
 @import "blocks/sidebar";
 @import "blocks/main";
 @import "blocks/container";
+@import "blocks/profile";
+@import "blocks/social";
+@import "blocks/btn";
