--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -25,9 +25,14 @@ body {
 /* Blocks */
 @import "blocks/page";
 @import "blocks/header";
+@import "blocks/nav";
+@import "blocks/subnav";
+@import "blocks/search";
 @import "blocks/sidebar";
 @import "blocks/main";
 @import "blocks/container";
 @import "blocks/profile";
 @import "blocks/social";
+@import "blocks/stories";
+@import "blocks/add-post";
 @import "blocks/btn";
