--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -35,4 +35,5 @@ body {
 @import "blocks/social";
 @import "blocks/stories";
 @import "blocks/add-post";
+@import "blocks/post";
 @import "blocks/btn";
