Add new posts, pagination and new page: post

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -34,6 +34,8 @@ body {
 @import "blocks/profile";
 @import "blocks/social";
 @import "blocks/stories";
+@import "blocks/btn";
 @import "blocks/add-post";
 @import "blocks/post";
-@import "blocks/btn";
+@import "blocks/embed";
+@import "blocks/pagination";
