--- a/src/assets/scss/blocks/post.scss
+++ b/src/assets/scss/blocks/post.scss
@@ -9,7 +9,16 @@
 }
 
 .post__header {
-  margin: -2.5rem -2.5rem 2.5rem;
+  margin: 0 0 2.5rem;
+  &--preview {
+    margin: -2.5rem -2.5rem 2.5rem;
+  }
+}
+
+.post__preview {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .post__content {
@@ -30,6 +39,10 @@
       text-decoration: underline;
     }
   }
+
+  &--mb0 {
+    margin-bottom: 0;
+  }
 }
 
 .post__text {
@@ -37,7 +50,48 @@
   color: #D2D2D2;
 }
 
+.post__footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .post__data {
+  display: flex;
   color: #828282;
   line-height: 1.2;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+.post__data-item {
+
+  &:not(:last-child):after {
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    margin: 0 1.5rem;
+    position: relative;
+    top: -2px;
+
+    border-radius: 50%;
+    background-color: #C4C4C4;
+  }
+}
+.post__read {
+  font-size: 1.4rem;
+  color: #107EFF;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
