--- a/src/assets/scss/blocks/post.scss
+++ b/src/assets/scss/blocks/post.scss
@@ -45,9 +45,59 @@
   }
 }
 
-.post__text {
+.post__description {
   font-size: 1.4rem;
   color: #D2D2D2;
+}
+
+.post__text {
+  font-size: 1.4rem;
+  color: $white;
+
+  h2, h3, h4, h5, h6 {
+    font-weight: 700;
+    margin-bottom: .5rem;
+  }
+
+  h2 {
+    font-size: 1.5em;
+  }
+
+  h3 {
+    font-size: 1.25em;
+  }
+
+  h4 {
+    font-size: 1.15em;
+  }
+
+  h5, h6 {
+    font-size: 1em;
+  }
+
+  ul, ol {
+    margin-bottom: 2rem;
+  }
+
+  ol {
+    list-style: decimal;
+    list-style-position: inside;
+  }
+
+  p {
+    margin-bottom: 2rem;
+  }
+
+  table {
+    margin-bottom: 2rem;
+    width: 100%;
+  }
+
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 .post__footer {
@@ -94,4 +144,31 @@
   &:hover {
     text-decoration: underline;
   }
+}
+
+.post__actions {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+
+  font-size: 1.2rem;
+  color: $white;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    opacity: .6;
+
+    transition: opacity .2s linear;
+
+    &:hover {
+      text-decoration: underline;
+      opacity: .4;
+    }
+  }
+}
+
+.post__actions--icon {
+  margin-left: .5rem;
 }
