--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -22,6 +22,14 @@ body {
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
 /* Blocks */
 @import "blocks/page";
 @import "blocks/header";
@@ -39,3 +47,6 @@ body {
 @import "blocks/post";
 @import "blocks/embed";
 @import "blocks/pagination";
+@import "blocks/related";
+@import "blocks/comments";
+@import "blocks/form";
