--- a/src/assets/scss/blocks/post.scss
+++ b/src/assets/scss/blocks/post.scss
@@ -45,14 +45,27 @@
   }
 }
 
+.post__subtitle {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+
+  font-size: 1.6rem;
+  color: $white;
+  font-weight: 500;
+}
+
 .post__description {
   font-size: 1.4rem;
   color: #D2D2D2;
 }
 
 .post__text {
+  padding-bottom: 1rem;
+
   font-size: 1.4rem;
   color: $white;
+
+  border-bottom: 1px solid #1c1c1c;
 
   h2, h3, h4, h5, h6 {
     font-weight: 700;
@@ -98,6 +111,10 @@
     max-width: 100%;
     height: auto;
   }
+
+  a {
+    color: $blue;
+  }
 }
 
 .post__footer {
@@ -113,11 +130,6 @@
 
   a {
     color: inherit;
-    text-decoration: none;
-
-    &:hover {
-      text-decoration: underline;
-    }
   }
 }
 
@@ -156,14 +168,12 @@
 
   a {
     color: inherit;
-    text-decoration: none;
 
     opacity: .6;
 
     transition: opacity .2s linear;
 
     &:hover {
-      text-decoration: underline;
       opacity: .4;
     }
   }
