--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -48,7 +48,7 @@
 
 
     <div class="sidebar__footer">
-        <a class="btn btn--red" href="#">Мои работы</a>
+        <a class="btn btn--red" href="works.html">Мои работы</a>
         <button class="btn btn--blue" type="button">Написать мне</button>
     </div>
 </aside>
