--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,11 +24,11 @@
                 </li>
 
                 <li class="nav__item">
-                    <a class="nav__link" href="#">Обо мне</a>
+                    <a class="nav__link" href="text.html">Обо мне</a>
                 </li>
 
                 <li class="nav__item">
-                    <a class="nav__link" href="#">Реклама</a>
+                    <a class="nav__link" href="text.html">Реклама</a>
                 </li>
             </ul>
         </nav>
@@ -42,7 +42,7 @@
                 </li>
 
                 <li class="nav__item">
-                    <a class="nav__link" href="#">Выйти</a>
+                    <a class="nav__link" href="signin.html">Выйти</a>
                 </li>
             </ul>
         </nav>
