--- a/src/assets/scss/blocks/btn.scss
+++ b/src/assets/scss/blocks/btn.scss
@@ -22,7 +22,8 @@
     background: $red;
     box-shadow: 0 7px 17px -10px rgba($red, .3);
 
-    &:hover {
+    &:hover,
+    &:focus {
       background: darken($red, 5%);
       text-decoration: none;
     }
@@ -32,7 +33,8 @@
     background: $blue;
     box-shadow: 0 7px 17px -10px rgba($blue, .3);
 
-    &:hover {
+    &:hover,
+    &:focus {
       background: darken($blue, 5%);
       text-decoration: none;
     }
