--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -3,13 +3,13 @@
 <head>
     {{> head }}
 </head>
-<body>
+<body class="no-scroll">
 
     <div class="page">
         {{> header }}
 
         <aside class="sidebar">
-            {{> sidebar}}
+            {{> sidebar }}
         </aside>
 
         <main class="main">
@@ -19,6 +19,7 @@
         </main>
     </div>
 
+<!--    {{> story-modal }}-->
     <!-- JS -->
     <script src="assets/js/app.js"></script>
 </body>
