Add @media. Complete mobile and tablet header and sidebar

--- a/src/assets/scss/blocks/nav.scss
+++ b/src/assets/scss/blocks/nav.scss
@@ -1,5 +1,25 @@
+.nav {
+  @include breakpoint($tablet-bp) {
+    display: none;
+  }
+
+  &--mobile {
+    display: none;
+    margin: 3rem 0;
+    padding-left: 1rem;
+
+    @include breakpoint($tablet-bp) {
+      display: block;
+    }
+  }
+}
+
 .nav__list {
   display: flex;
+
+  @include breakpoint($tablet-bp) {
+    flex-direction: column;
+  }
 }
 
 .nav__item {
@@ -13,6 +33,13 @@
 
     > .subnav {
       display:block;
+    }
+  }
+  @include breakpoint($tablet-bp) {
+    &:hover {
+      .nav__link {
+        background: none;
+      }
     }
   }
 }
@@ -48,5 +75,13 @@
       transform:
       translateY(-50%);
     }
+  }
+
+  @include breakpoint($tablet-bp) {
+    padding-left: 0;
+    padding-right: 0;
+
+    font-size: 1.6rem;
+    font-weight: 300;
   }
 }
