--- a/src/assets/scss/blocks/search.scss
+++ b/src/assets/scss/blocks/search.scss
@@ -19,4 +19,12 @@
   &::placeholder {
     color: rgba($white, .4);
   }
+
+  @include breakpoint($tablet-bp) {
+    padding-top: .9rem;
+    padding-bottom: .9rem;
+    font-weight: 300;
+
+    font-size: 1.6rem;
+  }
 }
