--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,4 +1,5 @@
 @import "vars";
+@import "mixins";
 @import "vendor/reset";
 
 html {
@@ -15,7 +16,8 @@ body {
     font-size: 1.4rem;
     color: $white;
 
-    &.no-scroll {
+    &.no-scroll,
+    &.show-sidebar {
         overflow: hidden;
     }
 }
@@ -58,4 +60,5 @@ a {
 @import "blocks/tags";
 @import "blocks/cabinet";
 @import "blocks/modal";
+@import "blocks/burger";
 
