--- a/src/assets/scss/blocks/add-post.scss
+++ b/src/assets/scss/blocks/add-post.scss
@@ -5,6 +5,10 @@
   box-shadow: 0 15px 25px rgba($black, .45);
   background-color: $secondary;
   border-radius: 5px;
+
+  @include breakpoint($mobile-bp) {
+    padding: 1.5rem;
+  }
 }
 
 .add-post__form {
@@ -13,15 +17,17 @@
 }
 
 .add-post__form-actions {
-  width: 20%;
+  width: 12rem;
+  flex-shrink: 0;
   display: flex;
   justify-content: flex-end;
 }
 
 .add-post__textarea {
   display: block;
-  width: 80%;
+  flex-grow: 1;
   height: 26px;
+  overflow: hidden;
 
   border: none;
   background: transparent;
