--- a/src/assets/scss/blocks/post.scss
+++ b/src/assets/scss/blocks/post.scss
@@ -6,6 +6,10 @@
   border-radius: 5px;
   box-shadow: 0 15px 25px rgba($black, .35);
   background-color: $primary;
+
+  @include breakpoint($mobile-bp) {
+    padding: 1.5rem;
+  }
 }
 
 .post__header {
@@ -121,6 +125,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @include breakpoint($mobile-bp) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .post__data {
@@ -130,6 +139,12 @@
 
   a {
     color: inherit;
+  }
+
+  @include breakpoint($mobile-bp) {
+    padding-bottom: 1rem;
+
+    font-size: 1.2rem;
   }
 }
 
