--- a/src/assets/scss/blocks/profile.scss
+++ b/src/assets/scss/blocks/profile.scss
@@ -1,7 +1,18 @@
+.profile {
+  margin-top: -5rem;
+
+  @include breakpoint($tablet-bp) {
+    margin-top: -1rem;
+    position: relative;
+
+    border-bottom: 1px solid #1C1C1C;
+  }
+}
+
 .profile__avatar {
   display: block;
-  width: 100px;
-  height: 100px;
+  width: 10rem;
+  height: 10rem;
   margin: 0 auto 2rem;
   position: relative;
 
@@ -9,20 +20,45 @@
   border: 2px solid $white;
   box-shadow: 0px 7px 20px rgba(0, 0, 0, .25);
   border-radius: 50%;
+
+  @include breakpoint($tablet-bp) {
+    width: 6.5rem;
+    height: 6.5rem;
+
+    margin-left: 0;
+    position: absolute;
+    left: 0;
+  }
+}
+
+.profile__header {
+  margin-bottom: 2rem;
+
+  text-align: center;
+
+  @include breakpoint($tablet-bp) {
+    padding-top: 2rem;
+    padding-left: 8rem;
+    text-align: left;
+  }
 }
 
 .profile__name {
   font-size: 1.8rem;
-  text-align: center;
+
+  @include breakpoint($tablet-bp) {
+    font-size: 1.5rem;
+  }
 }
 
 .profile__prof {
-  margin-bottom: 2rem;
-
   font-size: 1.4rem;
   font-weight: 300;
   color: #DEDEDE;
-  text-align: center;
+
+  @include breakpoint($tablet-bp) {
+    font-size: 1.2rem;
+  }
 }
 
 .profile__text {
@@ -33,5 +69,9 @@
   text-align: center;
 
   border-top: 1px solid #1c1c1c;
-  border-bottom: 1px solid #1c1c1c
+  border-bottom: 1px solid #1c1c1c;
+
+  @include breakpoint($tablet-bp) {
+    display: none;
+  }
 }
