--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,6 +32,10 @@
                 </li>
             </ul>
         </nav>
+
+        <button class="burger" type="button">
+            <span>Открыть навигацию</span>
+        </button>
     </div>
 
     <div class="header__right">
