--- a/src/assets/scss/blocks/cabinet.scss
+++ b/src/assets/scss/blocks/cabinet.scss
@@ -1,9 +1,17 @@
 .cabinet {
   display: flex;
+
+  @include breakpoint($mobile-bp) {
+    flex-direction: column;
+  }
 }
 
 .cabinet__form {
   width: 34rem;
+
+  @include breakpoint($mobile-bp) {
+    order: 2;
+  }
 }
 
 .cabinet__avatar {
@@ -14,6 +22,13 @@
   img {
     margin-bottom: 1.5rem;
     display: block;
+  }
+
+  @include breakpoint($mobile-bp) {
+    display: flex;
+    order: 1;
+    padding-left: 0;
+    margin-bottom: 2rem;
   }
 }
 
@@ -29,5 +44,9 @@
 
   &:hover {
     text-decoration: none;
+  }
+
+  @include breakpoint($mobile-bp) {
+    padding-left: 2rem;
   }
 }
