--- a/src/assets/scss/blocks/work.scss
+++ b/src/assets/scss/blocks/work.scss
@@ -6,6 +6,10 @@
   border-radius: 5px;
   box-shadow: 0 15px 25px rgba($black, .35);
   background-color: $primary;
+
+  @include breakpoint($mobile-bp) {
+    flex-direction: column;
+  }
 }
 
 .work__preview {
@@ -17,6 +21,11 @@
     height: 100%;
     object-fit: cover;
   }
+
+  @include breakpoint($mobile-bp) {
+    width: 100%;
+    height: 20rem;
+  }
 }
 
 .work__content {
@@ -25,6 +34,11 @@
 
   max-width: 29rem;
   padding: 2.5rem;
+
+  @include breakpoint($mobile-bp) {
+    max-width: none;
+    padding: 1.5rem;
+  }
 }
 
 .work__title {
@@ -37,6 +51,10 @@
   a {
     color: inherit;
   }
+
+  @include breakpoint($mobile-bp) {
+    margin-bottom: 2rem;
+  }
 }
 
 .work__description {
@@ -47,9 +65,18 @@
   font-weight: 300;
 
   color: #D2D2D2;
+
+  @include breakpoint($mobile-bp) {
+    margin-bottom: 2rem;
+    font-size: 1.4rem;
+  }
 }
 
 .work__footer {
   margin-top: auto;
   text-align: right;
+
+  @include breakpoint($mobile-bp) {
+    text-align: left;
+  }
 }
