--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,9 +16,14 @@ body {
     font-size: 1.4rem;
     color: $white;
 
-    &.no-scroll,
-    &.show-sidebar {
+    &.no-scroll {
         overflow: hidden;
+    }
+
+    @include breakpoint($tablet-bp) {
+        &.show-sidebar {
+            overflow: hidden;
+        }
     }
 }
 
