--- a/src/assets/scss/blocks/add-post.scss
+++ b/src/assets/scss/blocks/add-post.scss
@@ -13,7 +13,7 @@
 
 .add-post__form {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .add-post__form-actions {
@@ -30,7 +30,7 @@
 .add-post__textarea {
   display: block;
   flex-grow: 1;
-  height: 26px;
+  height: 34px;
   overflow: hidden;
 
   border: none;
