--- a/src/assets/scss/blocks/page.scss
+++ b/src/assets/scss/blocks/page.scss
@@ -6,22 +6,8 @@
   overflow: hidden;
 
   @include breakpoint($tablet-bp) {
-
     .show-sidebar & {
       position: relative;
-
-      &:after {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 100%;
-
-        background-color: rgba($black, .8);
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 100;
-      }
     }
   }
 }
@@ -33,5 +19,22 @@
 
   &--center {
     text-align: center;
+  }
+}
+
+.page__mask {
+  @include breakpoint($tablet-bp) {
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba($black, .8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    opacity: 0;
+
+    transition: opacity .2s linear;
   }
 }
