--- a/src/assets/scss/blocks/sidebar.scss
+++ b/src/assets/scss/blocks/sidebar.scss
@@ -2,6 +2,8 @@
   width: $sidebar-width;
   height: 100vh;
 
+  overflow: auto;
+
   background-color: $primary;
   box-shadow: 5px 0 15px rgba(#050505, .1);
 
@@ -57,5 +59,5 @@
 .sidebar__footer {
   display: flex;
   justify-content: space-between;
-  padding: 0 1.5rem;
+  padding: 0 1.5rem 3rem 1.5rem;
 }
