--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    <div class="page">
+    <div class="page" id="page">
         {{> header }}
 
         <aside class="sidebar">
@@ -19,7 +19,9 @@
         </main>
     </div>
 
-<!--    {{> story-modal }}-->
+    {{> story-modal }}
+    {{> contact-modal }}
+    {{> share-modal }}
     <!-- JS -->
     <script src="assets/js/app.js"></script>
 </body>
