--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar__header">
+<div class="sidebar__header" id="sidebar ">
     <img src="assets/images/sidebar-header.jpg" alt="" >
 </div>
 
@@ -91,5 +91,5 @@
 
 <div class="sidebar__footer">
     <a class="btn btn--red" href="works.html">Мои работы</a>
-    <button class="btn btn--blue" type="button">Написать мне</button>
+    <button class="btn btn--blue" type="button" data-modal="contact-modal">Написать мне</button>
 </div>
